Docs: update API docs in README.org

--- a/README.org
+++ b/README.org
@@ -11,7 +11,7 @@ A simple C++ library to simulate finite automata.
    :END:
 [WIP]
 
-The library mostly operates upon a object of class =finite_automata= which is a 5 tuple (Q, Σ, δ, q0, F)
+The library mostly operates upon a object of class =finite_automata= which is by definition a 5 tuple (Q, Σ, δ, q0, F)
 
 1. Q = finite set of states the automata can operate on.
 2. Σ = Finte set of input aphabet symbols
@@ -40,12 +40,19 @@ one can create an object of type =finite_automata= by simply passing all these t
 
 If there are not additional states to work upon, one can also construct finite automata wihout explicitly providing set of states and/or set of input alphabets ( in that case, those sets would be created via transition table)
 
----
-   
-- =fa::convert_to_dfa ()=: function which simply converts a [[https://en.wikipedia.org/wiki/Nondeterministic_finite_automaton][NFA]] to [[https://en.wikipedia.org/wiki/Deterministic_finite_automaton][DFA]] using [[https://en.wikipedia.org/wiki/Powerset_construction][subset construction method]]
+*** memeber functions
 
----
+- =fa::finite_automata::simulate ( std::string word)=: simulate the
+  finite automata on ths string =word=.
+- =fa::finite_automata::move (states current_state, symbol input_symbol)= : return the destination state/s from =current_state= when =input_symbol= is scanned.
+- =fa::finite_automata::move (std::set<state> states, symbol input_symbol)= : return the destination state/s from =states= when =input_symbol= is scanned.
+- =fa::finite_automata::epsilon_closure (state st)= : return the epsilon closure of the state =st=.
+- =fa::finite_automata::epsilon_closure (std::set<state> st)= : return the epsilon closure of the set of states =st=.
 
-This is my attempt to create a project based on the philosophy of using [[https://en.cppreference.com/w/cpp/language/auto][=auto=]] for all the things. The project solely exists for experimental/learning purposes and for me to learn about advantages/disadvantages of using auto everywhere in a C++ project.
+*** non-member functions
+- =fa::convert_to_dfa (finite_automata nfa)=: function which simply converts a [[https://en.wikipedia.org/wiki/Nondeterministic_finite_automaton][NFA]] to [[https://en.wikipedia.org/wiki/Deterministic_finite_automaton][DFA]] using [[https://en.wikipedia.org/wiki/Powerset_construction][subset construction method]] and returns the converted dfa ( object of type finite_automata )
 
-Critiques and/or suggestions to improve it are more than welcome.
+* For the Devs
+
+[WIP]
+
