--- a/README.org
+++ b/README.org
@@ -34,7 +34,7 @@ one can create an object of type =finite_automata= like this :
 
 learn more about the API in the docs.
 
-** Prerequisits ( to build from source )
+** Prerequisites ( to build from source )
 
 - [[https://gcc.gnu.org][standard C++ compiler]]
 - [[https://www.gnu.org/software/make/][GNU Make]]
